[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idkit = "0.1.0"
console = "0.15.8"
indicatif = "0.17.7"
qrcode = { version = "0.13.0", default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
thiserror = "1.0.56"
